# autotools_test

chap1/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello.c  mp3
chap1/.deps/: hello.Po
chap1/autom4te.cache/: output.0  requests  traces.1
chap10/: Makefile  libtool
chap10/autom4te.cache/: requests  traces.2
chap10/mp3-1.4/: Makefile.am  Makefile.in  config.guess  config.sub  configure  ltmain.sh
chap10/mp3-1.4/src/: Makefile.am  Makefile.in
chap10/src/: Makefile
chap10/src/.deps/: mp3-player.Po
chap10/src/app/: mp3
chap10/src/inc/: Makefile  Makefile.am
chap10/src/media/: Makefile  Makefile.am  Makefile.in
chap10/src/usb/: Makefile  usb.c
chap3/chap5/: Makefile  config.status
chap3/chap5/autom4te.cache/: requests
chap3/chap6/: Makefile  config.status  configure
chap3/flat/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
chap3/flat/.deps/: lcd.Po  media.Po  player.Po
chap3/flat/autom4te.cache/: output.1  requests  traces.0  traces.1
chap3/shallow/: Makefile  Makefile.in  config.status  configure  configure.ac
chap7/: Makefile  config.status  configure.ac  libtool
chap7/autom4te.cache/: requests
chap7/src/: Makefile  Makefile.am  Makefile.in
chap8/: Makefile  config.status  configure
chap8/autom4te.cache/: output.1  output.2  requests  traces.1  traces.2
chap8/mp3-1.4/: config.h  configure.ac
chap8/mp3-1.4/src/: Makefile.in
chap8/mp3-1.4/src/inc/: Makefile
chap8/mp3-1.4/src/lcd/: Makefile.am
chap8/mp3-1.4/src/lcd/.deps/: lcd.Po
chap8/mp3-1.4/src/media/: Makefile.in
chap8/mp3-1.4/src/usb/: Makefile.in
chap8/src/: Makefile  Makefile.am  Makefile.in  mp3  player.c
chap9/: Makefile  Makefile.in  config.h  config.status  configure.ac
chap9/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
chap9/mp3-1.4/src/lcd/: Makefile.in
chap9/mp3-1.4/src/media/: Makefile
chap9/src/: Makefile  Makefile.am  Makefile.in
chap9/src/app/: Makefile
chap9/src/app/.libs/: mp3
chap9/src/inc/: Makefile  Makefile.in  video.h
chap9/src/lcd/: Makefile  Makefile.am
chap9/src/lcd/.libs/: liblcd.so.0.0.0
chap9/src/media/h264/: Makefile  h264.h
chap9/src/media/h264/.deps/: h264.Po
chap9/src/usb/: Makefile.in
jpg/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  jpg.lo  libjpg.la  libtool
jpg/.deps/: jpg.Plo
jpg/.libs/: libjpg.lai  libjpg.so.0  libjpg.so.0.0.0
jpg/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
video/: video.c  video.h
(+84 files in other folders)
