#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(mp3, 1.4, 123456@qq.com)
AC_CONFIG_SRCDIR([src/app/player.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
#AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/inc/Makefile
                 src/lcd/Makefile
                 src/media/Makefile
                 src/media/h264/Makefile
                 src/app/Makefile
                 src/usb/Makefile])
AC_OUTPUT
